// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test custom ChatPrompt 1`] = `
"_grp: 1
_type: constructor
_id:
  - events
  - input
  - load
  - prompts
  - ChatPrompt
_kwargs:
  messages:
    - _grp: 1
      _type: constructor
      _id:
        - input
        - load
        - msgs
        - SystemMessage
      _kwargs:
        content: this is a system message
    - _grp: 1
      _type: constructor
      _id:
        - input
        - load
        - msgs
        - BotMessage
      _kwargs:
        content: this is a bot message
"
`;

exports[`test custom ChatPrompt 2`] = `
"- _grp: 1
  _type: constructor
  _id:
    - input
    - load
    - msgs
    - SystemMessage
  _kwargs:
    content: this is a system message
- _grp: 1
  _type: constructor
  _id:
    - input
    - load
    - msgs
    - BotMessage
  _kwargs:
    content: this is a bot message
"
`;
